[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.126"
logos = "0.16.1"
nom = "8.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3.103"
web-sys = { version = "0.3.103", features = ["console"] }
lazy_static = "1.5.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.76"
