[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.126"
logos = "0.16.1"
nom = "8.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3.103"
lazy_static = "1.5.0"
regex = "1.11.1"
wasm-bindgen-futures = "0.4.50"
async-recursion = "1.1.1"
futures = "0.3.32"

[dependencies.web-sys]
version = "0.3.103"
features = [
    "console",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemSyncAccessHandle",
    "FileSystemGetDirectoryOptions",
    "FileSystemGetFileOptions",
    "FileSystemReadWriteOptions",
    "FileSystemRemoveOptions",
    "StorageManager",
    "Navigator",
    "WorkerGlobalScope",
    "Window"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.76"
